--- a/etc/calamares/branding/default/stylesheet.qss
+++ b/etc/calamares/branding/default/stylesheet.qss
@@ -26,6 +26,8 @@ using `QComboBox` as a selector).
 This example stylesheet has all the actual styling commented out.
 The examples are not exhaustive.
 
+Use gammaray
+
 */
 
 /*** Generic Widgets.
@@ -49,7 +51,6 @@ QPushButton { background-color: green; }
 /*
 #mainApp { }
 #sidebarApp { }
-#logoApp { }
 */
 
 /*** Welcome module.
@@ -94,3 +95,37 @@ QPushButton#aboutButton { qproperty-icon: url(:/data/images/release.svg); }
 #licenseItem {  }
 #licenseItemFullText {  }
 */
+
+/* START OF QSS */
+
+#mainApp { }
+
+#sidebarApp {
+  background-color: #444;
+}
+
+#logoApp {
+  background-color: #444;
+}
+
+#sidebarMenuApp{
+  background-color: #444;
+  font: 20px;
+}
+
+QWidget {
+  font: 16px;
+}
+
+QDialogButtonBox{
+  dialogbuttonbox-buttons-have-icons: 0;
+}
+
+#debugButton {
+	font: bold 8px;
+	color: #444;
+}
+
+#debugButton:hover {
+  color: #444;
+}
